--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <ul class="nav-links" id="navLinks">
       <li><a href="index.html" class="active">Login</a></li>
       <li><a href="register.html">Register</a></li>
-      <li><a href="forgot.html">Forgot Password</a></li>
+      <li><a href="reset.html">Forgot Password</a></li>
     </ul>
   </nav>
 
