--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div id="error" class="error"></div>
     <button onclick="login()">Login</button>
     <a href="register.html"><button>Register</button></a>
-    <a href="forgot.html"><p>Forgot Password?</p></a>
+    <a href="reset.html"><p>Forgot Password?</p></a>
   </div>
 
   
