--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <ul class="nav-links" id="navLinks">
       <li><a href="index.html" class="active">Login</a></li>
       <li><a href="register.html">Register</a></li>
-      <li><a href="reset.html">Forgot Password</a></li>
+      <li><a href="forgot.html">Forgot Password</a></li>
     </ul>
   </nav>
 
@@ -56,7 +56,7 @@
     <div id="error" class="error"></div>
     <button onclick="login()">Login</button>
     <a href="register.html"><button>Register</button></a>
-    <a href="reset.html"><p>Forgot Password?</p></a>
+    <a href="forgot.html"><p>Forgot Password?</p></a>
   </div>
 
   
