--- a/reset.html
+++ b/reset.html
@@ -70,6 +70,7 @@
       margin-top: 1rem;
     }
   </style>
+
   <div class="register-container">
     <h2>Reset Your Password</h2>
     <form id="resetForm">
@@ -80,16 +81,20 @@
       <div id="success" class="success"></div>
     </form>
   </div>
+
+  <!-- Supabase SDK -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
+
   <script>
     // Supabase credentials
     const supabaseUrl = 'https://mqvjbgnipsjygmpwidnq.supabase.co';
     const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1xdmpiZ25pcHNqeWdtcHdpZG5xIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTIxNDkyNzQsImV4cCI6MjA2NzcyNTI3NH0.p-mZxDCirt9NY_3taGk7_mL-qK5zTR05jInt6FEWs4Y';
     const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
-    // On page load, let Supabase handle the session from the URL
+    // Get session from URL on page load (important for recovery)
     window.addEventListener('DOMContentLoaded', async () => {
-      const { data, error } = await supabase.auth.getSession();
+      const { data, error } = await supabase.auth.getSessionFromUrl({ storeSession: true });
+
       if (error || !data.session) {
         document.getElementById('resetForm').style.display = 'none';
         document.getElementById('error').textContent = 'Invalid or expired reset link.';
@@ -97,26 +102,33 @@
       }
     });
 
-    // Handle password reset form
+    // Handle password reset form submission
     const form = document.getElementById('resetForm');
     const errorDiv = document.getElementById('error');
     const successDiv = document.getElementById('success');
+
     form.addEventListener('submit', async function(e) {
       e.preventDefault();
       errorDiv.textContent = '';
       successDiv.textContent = '';
+
       const newPassword = document.getElementById('newPassword').value;
       const confirmPassword = document.getElementById('confirmPassword').value;
+
       if (!newPassword || !confirmPassword) {
         errorDiv.textContent = 'Please fill in both fields.';
         return;
       }
+
       if (newPassword !== confirmPassword) {
         errorDiv.textContent = 'Passwords do not match.';
         return;
       }
+
       successDiv.textContent = 'Processing...';
+
       const { error } = await supabase.auth.updateUser({ password: newPassword });
+
       if (error) {
         errorDiv.textContent = error.message;
         successDiv.textContent = '';
