--- a/reset.html
+++ b/reset.html
@@ -136,7 +136,7 @@
         successDiv.textContent = 'Password updated🎉! You can now log in.';
 form.reset();
 setTimeout(() => {
-  window.location.href = 'login.html'; // update to your actual login page path
+  window.location.href = 'index.html'; // update to your actual login page path
 }, 2000); // wait 2 seconds before redirecting
 
       }
