--- a/reset.html
+++ b/reset.html
@@ -133,7 +133,7 @@
         errorDiv.textContent = error.message;
         successDiv.textContent = '';
       } else {
-        successDiv.textContent = 'Password updated🎉! You can now log in.';
+        successDiv.textContent = 'Password updated successfully🎉! You can now log in.';
 form.reset();
 setTimeout(() => {
   window.location.href = 'index.html'; // update to your actual login page path
