--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -44,7 +45,7 @@
     <ul class="nav-links" id="navLinks">
       <li><a href="index.html" class="active">Login</a></li>
       <li><a href="register.html">Register</a></li>
-      
+
     </ul>
   </nav>
 
@@ -54,7 +55,9 @@
     <input type="email" id="email" placeholder="Email" />
     <input type="password" id="password" placeholder="Password" />
     <div id="error" class="error"></div>
-    <button onclick="login()">Login</button>
+    <button id="loginBtn" onclick="login()">Login</button>
+
+
     <a href="register.html"><button>Register</button></a>
     <a href="forgot.html"><p>Forgot Password?</p></a>
   </div>
