--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     loginBtn.textContent = "Login";
     loginBtn.disabled = false;
   } else {
-     errorDiv.textContent = "✅ Login Successful " + error.message;
+    errorDiv.textContent = "✅ Login successful!";
     errorDiv.className = "success";
     loginBtn.textContent = "Welcome...";
     // Optional delay before redirect
