--- a/volleyball.html
+++ b/volleyball.html
@@ -2,20 +2,112 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Volleyball Team Registration</title>
+  <title>Athletics Team Registration Form</title>
   <link rel="stylesheet" href="Style.css">
   <link rel="stylesheet" href="home.css">
   <style>
     body {
       font-family: Arial, sans-serif;
       padding: 20px;
-      background: #f9f9f9;
+      background: #f2f2f2;
     }
     
+    #scrollTopBtn {
+  display: none;
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  z-index: 99;
+  width: 56px;
+  height: 56px;
+  border: none;
+  outline: none;
+  background: none;
+  cursor: pointer;
+  box-shadow: 0 4px 16px rgba(0,0,0,0.18);
+  transition: transform 0.2s, box-shadow 0.2s;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+}
+#scrollTopBtn svg {
+  display: block;
+  width: 48px;
+  height: 48px;
+}
+#scrollTopBtn:hover {
+  transform: scale(1.08);
+  box-shadow: 0 6px 24px rgba(0,0,0,0.28);
+}
+
+@media (max-width: 900px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0 16px;
+  }
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    background: #222;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.12);
+    border-radius: 0 0 8px 8px;
+    z-index: 100;
+  }
+  .nav-links.show {
+    display: flex;
+  }
+  .nav-links li {
+    width: 100%;
+    text-align: left;
+    padding: 16px 24px;
+    border-bottom: 1px solid #333;
+  }
+  .nav-brand {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .hamburger {
+    display: block;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    margin-left: auto;
+  }
+  .hamburger span {
+    display: block;
+    height: 4px;
+    width: 28px;
+    background: #fff;
+    margin: 6px 0;
+    border-radius: 2px;
+    transition: 0.3s;
+  }
+}
+@media (min-width: 901px) {
+  .hamburger {
+    display: none;
+  }
+  .nav-links {
+    display: flex !important;
+    position: static;
+    flex-direction: row;
+    background: none;
+    box-shadow: none;
+    border-radius: 0;
+  }
+}
   </style>
 </head>
 <body>
-        <nav class="navbar">
+
+    <nav class="navbar">
   <div class="nav-brand">
     <a href="home.html">
       <img src="Images/images.jpeg" alt="WSU Logo" class="logo-img">
@@ -45,12 +137,15 @@
     </li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="index.html" id="logoutLink">Logout</a></li>
-  </ul> 
+  </ul>
+
+  
+
+
+  
 </nav>
-
-
-<form action="https://formspree.io/f/xdkzvvrn" method="POST">
-  <h2>WSU Volleyball Team Registration</h2>
+<form id="athleticsForm"  method="POST">
+  <h2>WSU Athletics Registration</h2>
 
   <label for="fullname">Full Name <span class="required">*</span></label>
   <input type="text" id="fullname" name="fullname" required>
@@ -86,28 +181,32 @@
   <label for="faculty">Faculty / Department</label>
   <input type="text" id="faculty" name="faculty">
 
-  <label>Have you played volleyball before? <span class="required">*</span></label>
+  <label>Have you competed in athletics before? <span class="required">*</span></label>
   <div class="checkbox-group">
     <label><input type="radio" name="experience" value="Yes" required> Yes</label>
     <label><input type="radio" name="experience" value="No"> No</label>
   </div>
 
-  <label for="position">Preferred Position</label>
-  <select id="position" name="position">
-    <option>Outside Hitter</option>
-    <option>Opposite Hitter</option>
-    <option>Middle Blocker</option>
-    <option>Setter</option>
-    <option>Libero</option>
-    <option>Defensive Specialist</option>
-    <option>Undecided</option>
+  <label for="previousTeam">If yes, where?</label>
+  <input type="text" id="previousTeam" name="previousTeam">
+
+  <label for="event">Preferred Event(s)</label>
+  <select id="event" name="event" multiple size="5">
+    <option>100m</option>
+    <option>200m</option>
+    <option>400m</option>
+    <option>800m</option>
+    <option>1500m</option>
+    <option>Long Jump</option>
+    <option>High Jump</option>
+    <option>Shot Put</option>
+    <option>Javelin</option>
+    <option>Discus</option>
   </select>
+  <small>Hold Ctrl (Cmd on Mac) to select multiple events</small>
 
-  <label for="height">Height (e.g., 1.75m or 5'9")</label>
-  <input type="text" id="height" name="height">
-
-  <label for="spikeReach">Spike Reach (if known)</label>
-  <input type="text" id="spikeReach" name="spikeReach">
+  <label for="personalBest">Personal Best Time/Distance (if known)</label>
+  <input type="text" id="personalBest" name="personalBest">
 
   <label for="training">How often do you train per week?</label>
   <input type="text" id="training" name="training">
@@ -132,16 +231,25 @@
 
   <label>
     <input type="checkbox" name="agreement" required>
-    I confirm that the information provided is true and I accept responsibility. <span class="required">*</span>
+    I confirm that the information above is accurate and I accept responsibility. <span class="required">*</span>
   </label>
 
   <label>
     <input type="checkbox" name="code" required>
-    I agree to follow the volleyball team’s code of conduct and training rules. <span class="required">*</span>
+    I agree to follow the athletics team’s code of conduct and training schedule. <span class="required">*</span>
   </label>
 
   <button type="submit">Submit Registration</button>
 </form>
+
+<!-- Scroll-to-Top Button -->
+<button id="scrollTopBtn" title="Go to top">
+  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <circle cx="16" cy="16" r="16" fill="#333"/>
+    <path d="M16 10 L16 22" stroke="#fff" stroke-width="2" stroke-linecap="round"/>
+    <path d="M10 16 L16 10 L22 16" stroke="#fff" stroke-width="2" stroke-linecap="round" fill="none"/>
+  </svg>
+</button>
 
 <!-- Footer -->
   <footer>
@@ -149,43 +257,20 @@
     <p>Developed to connect students with the Sports Department</p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
   <script>
-    function toggleMenu() {
-      const navLinks = document.getElementById("navLinks");
-      navLinks.classList.toggle("show");
-    }
-    const dropdownLink = document.getElementById('dropdownLink');
-    const moreDropdown = document.getElementById('moreDropdown');
-    const dropdownWrapper = document.getElementById('dropdownWrapper');
-
-    hamburger.addEventListener('click', () => {
-      navLinks.classList.toggle('active');
-    });
-
-    dropdownLink.addEventListener('click', function (e) {
-      e.preventDefault();
-      e.stopPropagation();
-      dropdownLink.classList.toggle('active');
-    });
+function toggleMenu() {
+  const navLinks = document.getElementById("navLinks");
+  navLinks.classList.toggle("active");
+}
+const hamburger = document.querySelector('.hamburger');
+if (hamburger) {
+  hamburger.addEventListener('click', toggleMenu);
+}
 
     document.addEventListener('click', function (e) {
-      if (!dropdownWrapper.contains(e.target)) {
-        dropdownLink.classList.remove('active');
-      }
-    });
-
-    
-
-  dropdownLink.addEventListener('click', function(event) {
-    event.preventDefault(); // Prevent the link from navigating
-    dropdownMenu.classList.toggle('show');
-  });
-
-  // Optional: Click outside to close the dropdown
-  document.addEventListener('click', function(event) {
-    const isClickInside = document.getElementById('dropdownWrapper').contains(event.target);
-    if (!isClickInside) {
-      dropdownMenu.classList.remove('show');
+    if (!dropdownWrapper.contains(e.target)) {
+      dropdownWrapper.classList.remove('active');
     }
   });
 
@@ -196,6 +281,109 @@
       window.location.href = this.href;
     }
   });
+
+  window.onscroll = function() {
+  const btn = document.getElementById("scrollTopBtn");
+  if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
+    btn.style.display = "flex";
+  } else {
+    btn.style.display = "none";
+  }
+};
+document.getElementById("scrollTopBtn").onclick = function() {
+  window.scrollTo({top: 0, behavior: 'smooth'});
+};
+
+ // Supabase setup
+  const supabaseUrl = "https://mqvjbgnipsjygmpwidnq.supabase.co";
+  const supabaseKey =
+    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1xdmpiZ25pcHNqeWdtcHdpZG5xIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTIxNDkyNzQsImV4cCI6MjA2NzcyNTI3NH0.p-mZxDCirt9NY_3taGk7_mL-qK5zTR05jInt6FEWs4Y";
+  const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+
+   document.getElementById("athleticsForm").addEventListener("submit", async function (e) {
+    e.preventDefault();
+
+    const form = e.target;
+    const submitBtn = form.querySelector("button[type='submit']");
+    submitBtn.disabled = true;
+    submitBtn.textContent = "Submitting...";
+
+    const formData = new FormData(form);
+
+const email = formData.get('email');
+const studentNumber = formData.get('studentNumber');
+
+// Check for existing email or student number
+const { data: existing, error: fetchError } = await supabase
+  .from("Athletics")
+  .select("*")
+  .or(`email.eq.${email},studentNumber.eq.${studentNumber}`);
+
+if (fetchError) {
+  alert("Error checking duplicates: " + fetchError.message);
+  submitBtn.disabled = false;
+  submitBtn.textContent = "Submit";
+  return;
+}
+
+if (existing.length > 0) {
+  alert("❌ A user with this email or student number already exists.");
+
+  // Reset email & student number
+  form.querySelector('input[name="email"]').value = "";
+  form.querySelector('input[name="studentNumber"]').value = "";
+  form.querySelector('input[name="email"]').focus();
+
+  // Reset button
+  submitBtn.disabled = false;
+  submitBtn.textContent = "Submit";
+  return;
+}
+
+const data = {
+  fullname: formData.get('fullname'),
+  studentNumber,
+  dob: formData.get('dob'),
+  gender: formData.get('gender'),
+  contact: formData.get('contact'),
+  email,
+  year: formData.get('year'),
+  faculty: formData.get('faculty'),
+  experience: formData.get('experience'),
+  previousTeam: formData.get('previousTeam'),
+  event: formData.getAll('event'),
+  personalBest: formData.get('personalBest'),
+  training: formData.get('training'),
+  medical: formData.get('medical'),
+  conditionDetails: formData.get('conditionDetails'),
+  emergencyContact: formData.get('emergencyContact'),
+  emergencyPhone: formData.get('emergencyPhone'),
+  relationship: formData.get('relationship'),
+  agreement: formData.get('agreement') === 'on',
+  code: formData.get('code') === 'on',
+};
+    try {
+    const { data: inserted, error } = await supabase
+      .from("Athletics")
+      .insert([data])
+      .select();
+
+    if (error) {
+      console.error("Insert error:", error);
+      alert("❌ Could not submit. Please try again later.");
+    } else {
+      alert("✅ Thank you for your application! We will get back to you as soon as we have the final decision on your application.");
+      form.reset();
+    }
+  } catch (err) {
+    console.error("Unexpected error:", err);
+    alert("Unexpected error: " + err.message);
+  }
+
+  submitBtn.disabled = false;
+  submitBtn.textContent = "Submit";
+});
+
   </script>
 </body>
 </html>
