--- a/basketball.html
+++ b/basketball.html
@@ -12,6 +12,97 @@
       background: #f8f9fa;
     }
     
+    #scrollTopBtn {
+  display: none;
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  z-index: 99;
+  width: 56px;
+  height: 56px;
+  border: none;
+  outline: none;
+  background: none;
+  cursor: pointer;
+  box-shadow: 0 4px 16px rgba(0,0,0,0.18);
+  transition: transform 0.2s, box-shadow 0.2s;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+}
+#scrollTopBtn svg {
+  display: block;
+  width: 48px;
+  height: 48px;
+}
+#scrollTopBtn:hover {
+  transform: scale(1.08);
+  box-shadow: 0 6px 24px rgba(0,0,0,0.28);
+}
+
+@media (max-width: 900px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0 16px;
+  }
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    background: #222;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.12);
+    border-radius: 0 0 8px 8px;
+    z-index: 100;
+  }
+  .nav-links.show {
+    display: flex;
+  }
+  .nav-links li {
+    width: 100%;
+    text-align: left;
+    padding: 16px 24px;
+    border-bottom: 1px solid #333;
+  }
+  .nav-brand {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .hamburger {
+    display: block;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    margin-left: auto;
+  }
+  .hamburger span {
+    display: block;
+    height: 4px;
+    width: 28px;
+    background: #fff;
+    margin: 6px 0;
+    border-radius: 2px;
+    transition: 0.3s;
+  }
+}
+@media (min-width: 901px) {
+  .hamburger {
+    display: none;
+  }
+  .nav-links {
+    display: flex !important;
+    position: static;
+    flex-direction: row;
+    background: none;
+    box-shadow: none;
+    border-radius: 0;
+  }
+}
   </style>
 </head>
 <body>
@@ -48,7 +139,7 @@
   </ul> 
 </nav>
 
-<form action="https://formspree.io/f/xnnvyyyk" method="POST">
+<form id="basketballForm" action="https://formspree.io/f/xnnvyyyk" method="POST">
   <h2>WSU Basketball Team Registration</h2>
 
   <label for="fullname">Full Name <span class="required">*</span></label>
@@ -140,6 +231,161 @@
   <button type="submit">Submit Registration</button>
 </form>
 
+<!-- Scroll-to-Top Button -->
+<button id="scrollTopBtn" title="Go to top">
+  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <circle cx="16" cy="16" r="16" fill="#333"/>
+    <path d="M16 10 L16 22" stroke="#fff" stroke-width="2" stroke-linecap="round"/>
+    <path d="M10 16 L16 10 L22 16" stroke="#fff" stroke-width="2" stroke-linecap="round" fill="none"/>
+  </svg>
+</button>
+
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+<script>
+window.onscroll = function() {
+  const btn = document.getElementById("scrollTopBtn");
+  if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
+    btn.style.display = "flex";
+  } else {
+    btn.style.display = "none";
+  }
+};
+document.getElementById("scrollTopBtn").onclick = function() {
+  window.scrollTo({top: 0, behavior: 'smooth'});
+};
+
+function toggleMenu() {
+  const navLinks = document.getElementById("navLinks");
+  navLinks.classList.toggle("active");
+}
+const hamburger = document.querySelector('.hamburger');
+if (hamburger) {
+  hamburger.addEventListener('click', toggleMenu);
+}
+
+// Supabase credentials {Initialize Supabase client}
+    const supabaseUrl = 'https://mqvjbgnipsjygmpwidnq.supabase.co';
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1xdmpiZ25pcHNqeWdtcHdpZG5xIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTIxNDkyNzQsImV4cCI6MjA2NzcyNTI3NH0.p-mZxDCirt9NY_3taGk7_mL-qK5zTR05jInt6FEWs4Y';
+    const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+
+
+  
+  document.getElementById('logoutLink').addEventListener('click', function (event) {
+    event.preventDefault();
+    const confirmed = confirm("Are you sure you want to logout?");
+    if (confirmed) {
+      window.location.href = this.href;
+    }
+  });
+
+  document.querySelector('#basketballForm').addEventListener('submit', async function (e) {
+    e.preventDefault();
+
+    const studentNumber = document.getElementById("studentNumber").value.trim();
+    const email = document.getElementById("email").value.trim();
+    const contact = document.getElementById("contact").value.trim();
+    const emergencyPhone = document.getElementById("emergencyPhone").value.trim();
+
+    // Validation: student number (9 digits)
+    if (!/^\d{9}$/.test(studentNumber)) {
+      alert("Student number must be exactly 9 digits.");
+      return;
+    }
+
+    // Email must start with studentNumber
+    const expectedEmail = `${studentNumber}@mywsu.ac.za`;
+    if (email !== expectedEmail) {
+      alert(`Email must be: ${expectedEmail}`);
+      return;
+    }
+
+    // Contact numbers
+    if (!/^0[678]\d{8}$/.test(contact)) {
+      alert("Contact number must start with 06, 07, or 08 and be exactly 10 digits.");
+      return;
+    }
+
+    if (!/^0[678]\d{8}$/.test(emergencyPhone)) {
+      alert("Emergency contact number must start with 06, 07, or 08 and be exactly 10 digits.");
+      return;
+    }
+
+    const form = e.target;
+    const submitBtn = form.querySelector('button[type="submit"]');
+    submitBtn.disabled = true;
+    submitBtn.textContent = "Checking...";
+
+    // Check for duplicates
+    const { data: existing, error: fetchError } = await supabase
+      .from('basketball')
+      .select('*')
+      .or(`email.eq.${email},studentNumber.eq.${studentNumber}`);
+
+    if (fetchError) {
+      alert("Error checking duplicates: " + fetchError.message);
+      submitBtn.disabled = false;
+      submitBtn.textContent = "Submit Registration";
+      return;
+    }
+
+    if (existing.length > 0) {
+      alert("❌ A registration with this email or student number already exists.");
+
+      // Reset only email and student number
+      form.email.value = '';
+      form.studentNumber.value = '';
+      form.email.focus();
+
+      submitBtn.disabled = false;
+      submitBtn.textContent = "Submit Registration";
+      return;
+    }
+
+    // Prepare form data
+    const data = {
+      fullname: form.fullname.value,
+      studentNumber,
+      dob: form.dob.value,
+      gender: form.gender.value,
+      contact: form.contact.value,
+      email,
+      year: form.year.value,
+      faculty: form.faculty.value,
+      experience: form.experience.value,
+      previousTeam: form.previousTeam.value,
+      position: form.position.value,
+      injuries: form.injuries.value,
+      training: form.training.value,
+      medical: form.medical.value,
+      conditionDetails: form.conditionDetails.value,
+      emergencyContact: form.emergencyContact.value,
+      emergencyPhone: form.emergencyPhone.value,
+      relationship: form.relationship.value,
+      agreement: form.agreement.checked,
+      code: form.code.checked
+    };
+
+    try {
+    const { data: inserted, error } = await supabase
+      .from("basketball")
+      .insert([data])
+      .select();
+
+    if (error) {
+      console.error("Insert error:", error);
+      alert("❌ Could not submit. Please try again later.");
+    } else {
+      alert("✅ Thank you for your application! We will get back to you as soon as we have the final decision on your application.");
+      form.reset();
+    }
+  } catch (err) {
+    console.error("Unexpected error:", err);
+    alert("Unexpected error: " + err.message);
+  }
+
+  submitBtn.disabled = false;
+  submitBtn.textContent = "Submit";
+});</script>
 <!-- Footer -->
   <footer>
     <p>&copy; 2025 Walter Sisulu University Sports Hub. All Rights Reserved.</p>
